fix: add rounded corners to themed scrollbar thumb

--- a/src/styles.css
+++ b/src/styles.css
@@ -125,6 +125,7 @@
 @supports selector(::-webkit-scrollbar) {
   .themed-scrollbar::-webkit-scrollbar-thumb {
     background: var(--scrollbar-color-thumb);
+    @apply rounded-full;
   }
   .themed-scrollbar::-webkit-scrollbar-track {
     background: var(--scrollbar-color-track);
